--- a/debugger/localsdlg.lfm
+++ b/debugger/localsdlg.lfm
@@ -1,25 +1,30 @@
 object LocalsDlg: TLocalsDlg
+  Caption = 'Locals'
+  ClientHeight = 200
+  ClientWidth = 500
+  HorzScrollBar.Page = 501
+  VertScrollBar.Page = 201
   Left = 359
+  Height = 200
   Top = 126
   Width = 500
-  Height = 200
-  Caption = 'Locals'
   object lvLocals: TListView
-    Left = 0
-    Top = 0
-    Width = 484
-    Height = 200
     Align = alClient
-    Columns = <
+    Columns = <    
       item
         Caption = 'Name'
+        ImageIndex = -1
+        Visible = True
         Width = 150
-      end
+      end    
       item
         Caption = 'Value'
-        Width = 400
+        ImageIndex = -1
+        Visible = True
       end>
     MultiSelect = True
     ViewStyle = vsReport
+    Height = 200
+    Width = 500
   end
-end 
+end
