--- a/components/fpcunit/guitestrunner.lfm
+++ b/components/fpcunit/guitestrunner.lfm
@@ -1,6 +1,6 @@
 object GUITestRunner: TGUITestRunner
   Caption = 'fpcUnit - run unit tests'
-  ClientHeight = 768
+  ClientHeight = 712
   ClientWidth = 646
   Icon.Data = {
     C50100002F2A2058504D202A2F0A7374617469632063686172202A2062746E5F
@@ -21,11 +21,11 @@ object GUITestRunner: TGUITestRunner
   }
   OnCreate = GUITestRunnerCreate
   OnDestroy = GUITestRunnerDestroy
-  PixelsPerInch = 96
+  PixelsPerInch = 95
   HorzScrollBar.Page = 647
-  VertScrollBar.Page = 769
+  VertScrollBar.Page = 713
   Left = 372
-  Height = 768
+  Height = 712
   Top = 142
   Width = 646
   object Panel1: TPanel
@@ -273,7 +273,7 @@ object GUITestRunner: TGUITestRunner
       Top = 16
       Width = 103
     end
-    object BitBtn1: TBitBtn
+    object btnClose: TBitBtn
       Caption = '&Exit'
       Glyph.Data = {
         B42500002F2A2058504D202A2F0A7374617469632063686172202A2065786974
@@ -579,11 +579,11 @@ object GUITestRunner: TGUITestRunner
         2020202020202020202020202020202020202020202020202020202020202020
         2020202020202020202020202020202020202020227D3B0A
       }
-      OnClick = BitBtn1Click
+      OnClick = BtnCloseClick
       TabOrder = 1
       Left = 536
       Height = 48
-      Top = 16
+      Top = 15
       Width = 96
     end
     object Label1: TLabel
@@ -610,12 +610,12 @@ object GUITestRunner: TGUITestRunner
   object Panel2: TPanel
     Align = alClient
     Caption = 'Panel2'
-    ClientHeight = 686
+    ClientHeight = 630
     ClientWidth = 646
     FullRepaint = False
     TabOrder = 1
     TabStop = True
-    Height = 686
+    Height = 630
     Top = 82
     Width = 646
     object PageControl1: TPageControl
@@ -624,42 +624,42 @@ object GUITestRunner: TGUITestRunner
       TabIndex = 0
       TabOrder = 0
       Left = 1
-      Height = 684
+      Height = 628
       Top = 1
       Width = 644
       object tsTestTree: TTabSheet
         Caption = 'Testcase tree'
-        ClientHeight = 658
-        ClientWidth = 636
-        Height = 658
-        Width = 636
-        object TreeView1: TTreeView
+        ClientHeight = 606
+        ClientWidth = 644
+        Height = 606
+        Top = 22
+        Width = 644
+        object TestTree: TTreeView
           Align = alTop
           AutoExpand = True
           BackgroundColor = clBtnFace
-          DefaultItemHeight = 16
+          DefaultItemHeight = 17
           Images = ImageList1
           ParentCtl3D = False
           ScrollBars = ssAutoBoth
           TabOrder = 0
-          OnClick = TreeView1Click
+          OnSelectionChanged = TestTreeSelectionChanged
           Options = [tvoAutoExpand, tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
           Height = 480
           Top = 63
-          Width = 636
+          Width = 644
         end
         object Panel4: TPanel
           Align = alTop
           ClientHeight = 63
-          ClientWidth = 636
+          ClientWidth = 644
           FullRepaint = False
           TabOrder = 1
           Height = 63
-          Width = 636
-          object PaintBox1: TPaintBox
+          Width = 644
+          object pbBar: TPaintBox
             ParentColor = True
-            OnClick = PaintBox1Click
-            OnPaint = PaintBox1Paint
+            OnPaint = pbBarPaint
             Left = 22
             Height = 32
             Top = 15
@@ -672,46 +672,47 @@ object GUITestRunner: TGUITestRunner
           Height = 10
           MinSize = 400
           ParentColor = True
-          Width = 636
+          Width = 644
           Cursor = crVSplit
           Height = 10
           Top = 543
-          Width = 636
+          Width = 644
         end
         object Memo1: TMemo
           Align = alClient
           PopupMenu = PopupMenu2
           TabOrder = 3
-          Height = 105
+          Height = 53
           Top = 553
-          Width = 636
+          Width = 644
         end
       end
       object tsResultsXML: TTabSheet
         Caption = 'Results XML'
-        ClientHeight = 658
-        ClientWidth = 636
-        Height = 658
-        Width = 636
+        ClientHeight = 606
+        ClientWidth = 644
+        Height = 606
+        Top = 22
+        Width = 644
         object Panel3: TPanel
           Align = alClient
           Caption = 'Panel3'
-          ClientHeight = 658
-          ClientWidth = 636
+          ClientHeight = 606
+          ClientWidth = 644
           FullRepaint = False
           TabOrder = 0
           TabStop = True
-          Height = 658
-          Width = 636
+          Height = 606
+          Width = 644
           object Panel5: TPanel
             Align = alTop
             BorderWidth = 1
-            ClientHeight = 42
+            ClientHeight = 58
             ClientWidth = 642
             FullRepaint = False
             TabOrder = 0
             Left = 1
-            Height = 42
+            Height = 58
             Top = 1
             Width = 642
             object SpeedButton1: TSpeedButton
@@ -834,7 +835,7 @@ object GUITestRunner: TGUITestRunner
               Left = 16
               Height = 30
               Hint = 'Copy results to clipboard'
-              Top = 7
+              Top = 14
               Width = 31
             end
             object SpeedButton2: TSpeedButton
@@ -895,18 +896,25 @@ object GUITestRunner: TGUITestRunner
               Left = 54
               Height = 30
               Hint = 'Cut results to clipboard'
-              Top = 7
+              Top = 14
               Width = 31
+            end
+            object pbBar1: TPaintBox
+              ParentColor = True
+              OnPaint = pbBarPaint
+              Left = 110
+              Height = 31
+              Top = 14
+              Width = 512
             end
           end
           object XMLMemo: TMemo
             Align = alClient
-            OnChange = XMLMemoChange
             PopupMenu = PopupMenu1
             TabOrder = 1
             Left = 1
-            Height = 618
-            Top = 43
+            Height = 546
+            Top = 59
             Width = 642
           end
         end
@@ -914,8 +922,8 @@ object GUITestRunner: TGUITestRunner
     end
   end
   object ImageList1: TImageList
-    left = 20
-    top = 464
+    left = 16
+    top = 432
     Bitmap = {
       6C690C00000010000000100000009D0E00002F2A2058504D202A2F0A73746174
       69632063686172202A206C65646C69676874677265656E5F78706D5B5D203D20
